LogTouchedMethods (8025692) asserts if TieredCompilation is off.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b78
    • ppc, sparc_64

        LogTouchedMethods causes the template interpreter to generate profiling code even
        if no compiler is used. If TieredCompilation is off, code containing an assertion
        that UseCompiler is set, is reached.
        This assertion exists on the sparc and ppc platforms.
        Fix:
        Check for LogTouchedMethods in the assertion.
        Also added testcase with -XX:-TieredCompilation.

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: