8132242: LogTouchedMethods (8025692) asserts if TieredCompilation is off

LogTouchedMethods causes the template interpreter to generate profiling code even if no compiler is used. If TieredCompilation is off, code containing an assertion that checks that UseCompiler is set, is reached. This assertion exists on the sparc and ppc platforms.

Reviewed-by: simonis, iklam, minqi